@@ -4,13 +4,16 @@
 \usage{
   geom_raster(mapping = NULL, data = NULL,
     stat = "identity", position = "identity", hjust = 0.5,
-    vjust = 0.5, ...)
+    vjust = 0.5, interpolate = FALSE, ...)
 }
 \arguments{
   \item{hjust,vjust}{horizontal and vertical justification
   of the grob.  Each justification value should be a number
   between 0 and 1.  Defaults to 0.5 for both, centering
   each pixel over its data location.}
+
+  \item{interpolate}{If \code{TRUE} interpolate linearly,
+  if \code{FALSE} (the default) don't interpolate.}
 
   \item{mapping}{The aesthetic mapping, usually constructed
   with \code{\link{aes}} or \code{\link{aes_string}}. Only
@@ -55,6 +58,9 @@ pp <- function (n,r=4) {
  df
 }
 qplot(x, y, data = pp(20), fill = z, geom = "raster")
+# Interpolation worsens the apperance of this plot, but can help when
+# rendering images.
+qplot(x, y, data = pp(20), fill = z, geom = "raster", interpolate = TRUE)
 
 # For the special cases where it is applicable, geom_raster is much
 # faster than geom_tile:
